bugfix overflow x in index

--- a/public/static/styles/styles.css
+++ b/public/static/styles/styles.css
@@ -6,7 +6,7 @@
 
 body {
   position: relative;
-  /* overflow-x: hidden;*/ }
+  overflow-x: hidden; }
 
 .icon {
   display: block;
